--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.2.0",
     "gulp-image": "^4.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
