--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Chris Underwood",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.2",
